added new lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,17 @@ edition = "2021"
 
 [dependencies]
 gemini-engine = "0.14.1"
+
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+enum_glob_use = "warn"
+pedantic = "warn"
+nursery = "warn"
+unwrap_used = "warn"
+
+cast_possible_truncation = "allow"
+cast_precision_loss = "allow"
+cast_sign_loss = "allow"
+cast_possible_wrap = "allow"
